Changes for 1.0beta10:

 - added sort order for custom graphs (Alexei)
 - added column graphs_items.sortorder (Alexei)
 - fixed problem when adding host from template and function 'str' 
 is used. Thanks to Jean-Baptiste Mariotte. (Alexei)
 - support of proc_cnt[*] under Solaris. Thanks to Marc Ledent (Alexei)
 - fixed sysinfo() result. Multiplication to mem_unit required (Alexei)
 - better reporting in case of different startup errors (Alexei)
 - added include/pid.c and include/pid.h (Alexei)
 - PostreSQL related fixes (Alexei)
 - added src/zabbix_snmptrap (Alexei)
 - fixed support of user-defined height of graphs (Alexei)
 - added frontends/include.classes.inc.php (Alexei)
 - show selected host in Host Add form (Alexei)
 - fixed snmptrap.sh (Alexei)
 - improved performance of simple graphs (Alexei)
 - minor fixes to eliminate compiler's warnings (Alexei)
 - fix to show HTML characters of string items in Latest Values and
 History  (Alexei)
 - added disk statistics to data.sql (Alexei)
 - popup confirmation screen for deletes and updates (Alexei)
 - buttons "Activate selected" and "Disable selected" in item
 maintenance form (Alexei)
 - do not wrap Latest Values (Alexei)
 - support for changing of graph items (Alexei)
 - menu will not require more than three lines (Alexei)
 - fixed dividion by zero in chart2.php (Alexei)
 - period and start of interval are preserved in full-screen mode (Alexei)
 - added units in graph legends (Alexei)
 - table-like legend for user graphs (Alexei)
 - small fix for executing user scripts (Alexei)
 - fix to enable use of abschange() (Alexei)
 - cosmetic change of "LATEST VALUES" screen (Alexei)
 - support for simple checks :smtp_perf, ftp_perf, ssh_perf, etc. (Alexei)
 - fixed nasty bug in getting SNMP parameters. Thanks to Igor Micko.
 (Alexei)
 - added support for diskused[*] (Alexei)
 - Alert History renamed to Alerts (Alexei)
 - Status of Triggers renamed to Triggers (Alexei)